# LabelMaster

./: .gitignore  README.md  log_config.json  pyproject.toml
app/core/: interface.py
app/core/create_project/: model.py
app/streamlit_app/: main.py  test_main.py
app/streamlit_app/components/: button.py
app/streamlit_app/pages/: interface.py  mainpage.py  page_1.py  page_2.py
