[project]
name = "labelmaster"
version = "0.1.0"
description = "Streamlit-based app for labeling and model management"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]

dependencies = [
    "streamlit>=1.37.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0"
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "isort>=5.12.0",
    "pylint>=3.0.0",
    "pytest>=8.0.0"
]

ml = [
    "scikit-learn>=1.5.0",
    "torch>=2.2.0",
    "tensorflow>=2.16.0"
]

viz = [
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0"
]

all = [
    "labelmaster[dev,ml,viz]"
]

[tool.setuptools]
packages = ["app"]